2013-09-26

	* Return EXIT_SUCCESS if user.pax.flags is done after paxctl-ng -d.  This
	addresses https://bugs.gentoo.org/485908

2013-05-20

	* Bump to automake 1.12
	* Add check if ELF_C_RDWR_MMAP is declared in libelf.h.  This distinguishes
	elfutils from libelf.  The former will not build on uclibc, but the laster
	does not provide ELF_C_RDWR_MMAP.
	* Clean up the tests so they work for all combinations of --{en,dis}able-{pt,xt}pax
	* Add a bash utility, paxmark.sh, which does PaX marking like the eclass.  This is for
	build systems that do PaX marking during the build.

2012-12-28

	* src/paxctl-ng.c: -L/-l alone report if PT_PAX/XATTR_PAX is supported.
	* Use NEEDED.ELF.2 for revdep-pax and migrate-pax

2012-12-26

	* Fix the flag logic on paxctl-ng and clean up documenation
	* Encapsulate all forward/reverse linkings in class LinkMap in link_map.py
	* Use the portage module instead of reading /var/db/pkg for link info
	* Use NEEDED.ELF.2 instead of deprecated NEEDED for link info

2012-12-21

	* Change the name XT_PAX to XATTR_PAX to follow upstream everywhere
	except in this document.

2012-12-16

	* Add logic for NEED_PAX_DECLS when gelf.h is present but lacks them
	As of >=glibc-2.16 gentoo no longer carries PAX_DECLS in elf.h
	* scripts/paxmodule.c: do not use '-' when setting null XATTR PAX flags
	* scripts/paxmodule.c: adopt the update_flags() logic of paxctl-ng.c
	* scripts/paxmodule.c: adopt the parse_cmd_args() logic of paxctl-ng.c
	* scripts/revdep-pax: clean up flag exporter/importer logic
	* added tests/paxmodule: test python pax module
	* added up tests/pxtpax: do marked flags <-> running process testing
	* added tests/revdeppaxtest: test revdep-pax
	* Tests now give proper return values and are not verbose by default

2012-11-10

	* fix a typo in revdep-pax script and documentation
	* make both PT_PAX and xattr PAX optionally enabled/disabled in
	configure.ac and propagated to src/paxctl-ng.c and script/paxmodule.c