@@ -1,3 +1,7 @@
+2014-01-08
+
+	* Added install.wrapper.c for https://bugs.gentoo.org/465000
+
 2013-09-26
 
 	* Return EXIT_SUCCESS if user.pax.flags is done after paxctl-ng -d.  This
